[gd_scene load_steps=6 format=3 uid="uid://dbq18gpd2b2mb"]

[ext_resource type="Script" uid="uid://bi5ncinjyj6jl" path="res://scripts/Menu Scripts/Escolha de personagem Bot.gd" id="1_ddpfl"]
[ext_resource type="Texture2D" uid="uid://dr52xeju05o0x" path="res://assets/Cards/modelo de card mago de fogo.png" id="2_xs1iv"]
[ext_resource type="Texture2D" uid="uid://cddbk2eyoeuok" path="res://assets/Cards/mago da  naturexa.png" id="3_pfybv"]
[ext_resource type="Texture2D" uid="uid://cm6ub76c8n10d" path="res://assets/Cards/modelo de card de pe.png" id="4_v4g5x"]

[sub_resource type="LabelSettings" id="LabelSettings_xs1iv"]
font_size = 30

[node name="Escolha de personagem Bot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ddpfl")

[node name="Mago de Fogo" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 0.079
anchor_bottom = 0.429
offset_left = 14.0
offset_top = 167.0
offset_right = 234.992
offset_bottom = 310.008
grow_vertical = 0
texture_normal = ExtResource("2_xs1iv")
ignore_texture_size = true
stretch_mode = 0

[node name="Mago da natureza" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 0.079
anchor_bottom = 0.429
offset_left = 416.0
offset_top = 5.0
offset_right = 636.992
offset_bottom = 148.008
texture_normal = ExtResource("3_pfybv")
ignore_texture_size = true
stretch_mode = 0

[node name="Mago de Agua" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 0.079
anchor_bottom = 0.429
offset_left = 814.0
offset_top = 167.0
offset_right = 1034.99
offset_bottom = 310.008
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("4_v4g5x")
ignore_texture_size = true
stretch_mode = 0

[node name="Voltar" type="Button" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 4.0
offset_right = 88.0
offset_bottom = 54.0
text = "Voltar"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 418.0
offset_top = 544.0
offset_right = 775.0
offset_bottom = 586.0
text = "Escolha seu Inimigo"
label_settings = SubResource("LabelSettings_xs1iv")

[connection signal="pressed" from="Mago de Fogo" to="." method="_on_mago_de_fogo_pressed"]
[connection signal="pressed" from="Mago da natureza" to="." method="_on_mago_da_natureza_pressed"]
[connection signal="pressed" from="Mago de Agua" to="." method="_on_mago_de_agua_pressed"]
[connection signal="pressed" from="Voltar" to="." method="_on_voltar_pressed"]
